apps/inquiry-backend/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inquiry-backend
  namespace: banking-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inquiry-backend
  template:
    metadata:
      labels:
        app: inquiry-backend
    spec:
      containers:
        - name: inquiry-backend
          image: rmat98/java_backend:v1.0.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

          volumeMounts:
            - name: kafka-certs
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: kafka-certs
          projected:
            sources:
              - secret:
                  name: main-cluster-cluster-ca-cert
                  items:
                    - key: ca.p12
                      path: ca.p12
              - secret:
                  name: java-microservice-user
                  items:
                    - key: user.p12
                      path: user.p12
