apps/inquiry-backend/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-api-ingress
  namespace: banking-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/balance/$2
spec:
  ingressClassName: nginx
  rules:
    - host: kafka.local # 1 :  Domain
      http:
        paths:
          - path: /(/|$)(.*) # 2:  Path
            pathType: Prefix
            backend:
              service:
                name: inquiry-backend-service # 3: Destination
                port:
                  number: 80
